2008-12-09  Vincent Untz  <vuntz@gnome.org>

	* main.c: (main): set an application name. It's used by the gio
	authentication dialog.

2008-12-09  Vincent Untz  <vuntz@gnome.org>

	* main.c: (main): don't call gnome_authentication_manager_init()
	anymore. Since we use gio, we don't need to do this which was needed
	for gnome-vfs.

2008-12-08  Vincent Untz  <vuntz@gnome.org>

	Use dbus-based uniquification instead of bonobo-based, and makes it
	possible to replace a currently running panel.
	Based on patch by Colin Walters <walters@verbum.org>
	Fix bug #558534.

	* GNOME_Panel.server.in: kill
	* Makefile.am: updated for file removal
	* main.c: (main): add a --replace option to replace the current panel
	* panel-session.c: (panel_session_handle_die_request): just call
	panel_shell_quit()
	* panel-shell.[ch]: this is pretty much rewritten

2008-12-08  Vincent Untz  <vuntz@gnome.org>

	* libpanel-util/panel-cleanup.c: (panel_cleanup_register),
	(panel_cleanup_unregister): accept NULL data

2008-12-08  Vincent Untz  <vuntz@gnome.org>

	* panel-action-button.c: use C_() instead of Q_().
	* panel-menu-items.c: (panel_place_menu_item_create_menu),
	(panel_menu_items_append_lock_logout): ditto
	* panel-properties-dialog.c:
	(panel_properties_dialog_setup_orientation_combo): use NC_() and
	then g_dpgettext2() instead of Q_()
	Based on patch by Philip Withnall <bugzilla@tecnocode.co.uk>
	Fix bug #558418, part of a GNOME Goal.

==================== 2.24.2 ====================

==================== 2.24.1 ====================

==================== 2.24.0 ====================

2008-09-22  Vincent Untz  <vuntz@gnome.org>

	* panel-properties-dialog.glade: fix for GTK+ adjustment enforcement
	http://mail.gnome.org/archives/desktop-devel-list/2008-September/msg00148.html

2008-09-11  Benjamin Berg  <benjamin@sipsolutions.net>

	* menu.c: (panel_create_menu):
	* panel-context-menu.c: (panel_context_menu_create):
	Name the panel menus "gnome-panel-main-menu" for the menubar and